JDBC-6135 Fortify reports (MCP config credential redaction guard)